Printing Longest common subsequence gfg-45 d-53

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "random": "cpp",
-        "sort012cpp": "cpp"
+        "sort012cpp": "cpp",
+        "string": "cpp"
     }
 }
